--- a/details/details.html
+++ b/details/details.html
@@ -19,7 +19,7 @@
             class="bg-gray-700 border-2 border-white flex w-full my-8 items-center justify-between px-8">
             <div class="flex items-center">
                 <img src="../Recursos Moviestack/Moviestack_isotipo.png" class="h-64 w-56 md:w-1/8 mr-4">
-                <h1><img src="../Recursos Moviestack/Moviestack_logotipo2.png" class=" md:w-96 w-64"></h1>
+                <h1 class="hidden md:block"><img src="../Recursos Moviestack/Moviestack_logotipo2.png" class=" md:w-96 w-64"></h1>
             </div>
             <nav class="flex flex-col gap-5 md:flex-row">
                 <a href="../index.html" class="uppercase text-white p-3 text-3xl">home</a>
