--- a/favorites/favoritas.html
+++ b/favorites/favoritas.html
@@ -20,7 +20,7 @@
             class="bg-gray-700 border-2 border-white flex w-full my-8 items-center justify-between px-8">
             <div class="flex items-center">
                 <img src="../Recursos Moviestack/Moviestack_isotipo.png" class="h-64 w-1/8 mr-4">
-                <h1><img src="../Recursos Moviestack/Moviestack_logotipo2.png" class="w-1/2 md:w-96"></h1>
+                <h1 class="hidden md:block"><img src="../Recursos Moviestack/Moviestack_logotipo2.png" class="w-1/2 md:w-96"></h1>
             </div>
             <nav class="flex flex-col gap-5 md:flex-row">
                 <a href="../index.html" class="uppercase text-white p-3 text-3xl">home</a>
@@ -29,7 +29,7 @@
             </nav>
         </div>
     </header>
-    <div class="container mx-auto mt-8" id="movies-container">
+    <div class="mx-auto mt-8 flex justify-center items-center bg-gray-700 gap-10 flex-wrap" id="favoritosContainer">
     </div>
 
     <footer class="text-white text-center py-8">
