--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             class="bg-gray-700 border-2 border-white flex w-full my-8 items-center justify-between px-8">
             <div class="flex items-center">
                 <img src="./Recursos Moviestack/Moviestack_isotipo.png" class="h-64 w-1/8 mr-4">
-                <h1><img src="Recursos Moviestack/Moviestack_logotipo2.png" class="w-1/2 md:w-96"></h1>
+                <h1 class="hidden md:block"><img src="Recursos Moviestack/Moviestack_logotipo2.png" class="w-1/2 md:w-96"></h1>
             </div>
             <nav class="flex flex-col gap-5 md:flex-row">
                 <a href="#" class="uppercase p-3 text-3xl border-2 border-white">home</a>
