--- a/favorites/favoritas.html
+++ b/favorites/favoritas.html
@@ -35,7 +35,7 @@
     <footer class="text-white text-center py-8">
         <h3 class="text-3xl text-center text-white pt-5">MindHub -Cohort N54</>
     </footer>
-    <script src="./favoritas.js"></script>
+    <script src="./favoritas.js" type="module"></script>
 </body>
 
 </html>
